--- a/tinyappProject/package.json
+++ b/tinyappProject/package.json
@@ -4,6 +4,7 @@
   "description": "full stack web app built using Node and Express that shortens long URLs",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
